--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Your Name</title>
+  <title>Matthew Dunnavant</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -83,10 +83,6 @@
     </p>
   </section>
 </div>
-
-<footer>
-  &copy; 2025 Your Name. All rights reserved.
-</footer>
 
 </body>
 </html>
