--- a/index.html
+++ b/index.html
@@ -69,14 +69,13 @@
   <section id="projects">
     <h2>Projects</h2>
     <ul>
-      <li><strong>Project One:</strong> A short description.</li>
-      <li><strong>Project Two:</strong> Another short description.</li>
+      <li><strong>Project One: Port Scanner</strong> A port scanner is a network tool used to detect open ports on a computer or device. It sends requests to a range of ports on a target IP address to see which ones respond, helping determine which services or applications are running and accessible.</li>
     </ul>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>Email: <a href="mailto:matthewwdunnavant@gmail.com">matthewwdunnavant@gmail.com</a></p>
     <p>Socials:
       <a href="https://twitter.com/yourhandle">Twitter</a> |
       <a href="https://github.com/yourhandle">GitHub</a>
