--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      background: #110030;
       color: #333;
       margin: 0;
       padding: 0;
