--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #110030;
+      background: #ccb299;
       color: #333;
       margin: 0;
       padding: 0;
     }
     header {
-      background: #854200;
+      background: #e3bc96;
       color: #fff;
       padding: 20px 0;
       text-align: center;
