--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       padding: 0;
     }
     header {
-      background: #463c4f;
+      background: #0;
       color: #fff;
       padding: 20px 0;
       text-align: center;
