--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     header {
       background: #FFFFFF;
-      color: #fff;
+      color: #000000;
       padding: 20px 0;
       text-align: center;
     }
