--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <h2>Contact</h2>
     <p>Email: <a href="mailto:matthewwdunnavant@gmail.com">matthewwdunnavant@gmail.com</a></p>
     <p>Socials:
-      <a href="https://twitter.com/yourhandle">Twitter</a> |
-      <a href="https://github.com/yourhandle">GitHub</a>
+      <a href="https://www.linkedin.com/in/matthew-dunnavant-356244287/">LinkedIn</a> |
+      <a href="https://github.com/MatthewDun">GitHub</a>
     </p>
   </section>
 </div>
